--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -1,66 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-        <script src="{{ url_for('static', filename='js/site.js') }}"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/site.css') }}" type="text/css" />
-    </head>
-    <body class="bg-gradient">
-        <div class="container login-container">
-            <div class="row justify-content-center">
-                <div class="col-xl-6 col-lg-6 col-md-6">
-                    <div class="card border-0 shadow-lg my-5">
-                        <div class="card-body p-0">
-                            <div class="row justify-content-center">
-                                <div class="p-5">
-                                    <div class="text-center">
-                                        <i class="fa-3x fas fa-shop logo-waving"></i>
-                                        <br /><br />
-                                        <h1 class="h4 mb-4">LOGIN</h1>
-                                    </div>
-                                    <div id="AlertModalDiv" class="hidden">
-                                    </div>
-                                    <form class="user"  action="{{ url_for('login') }}" method="POST" 
-                                        data-ajax="true" data-ajax-method="POST" 
-                                        data-ajax-failure="onFailure" data-ajax-success="onSuccess">
-                                        <div class="form-group">
-                                            <input class="form-control form-control-user" placeholder="Enter Username..." />
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="password" class="form-control form-control-user" placeholder="Password" />
-                                        </div>
-                                        <div class="form-group">
-                                            <div>
-                                                <input type="checkbox" id="customCheck">
-                                                <label class="small" >Remember Me</label>
-                                            </div>
-                                        </div>
-                                        <button class="btn btn-outline-secondary btn-block" type="submit">Login</button>
-                                        <hr>
-                                        <a href="index" class="btn btn-outline-danger btn-block">
-                                            <i class="fab fa-google fa-fw"></i> Login with Google
-                                        </a>
-                                        <a href="index" class="btn btn-outline-primary btn-block">
-                                            <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
-                                        </a>
-                                        <hr>
-                                        <div class="text-center">
-                                            <a class="btn btn-link" href="index">Forgot Password?</a>
-                                        </div>
-                                        <div class="text-center">
-                                            <a class="btn btn-link" href="index">Sign up now!</a>
-                                        </div>
-                                    </form>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='js/site.js') }}"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/site.css') }}" type="text/css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/dark_site.css') }}" type="text/css" />
+</head>
+<body class="bg-gradient">
+    <div class="container login-container">
+        <div class="row justify-content-center">
+            <div class="col-xl-6 col-lg-6 col-md-6">
+                <div class="card border-0 shadow-lg my-5">
+                    <div class="card-body p-0">
+                        <div class="row justify-content-center">
+                            <div class="p-5">
+                                <div class="text-center">
+                                    <i class="fa-3x fas fa-shop logo logo-waving"></i>
+                                    <br /><br />
+                                    <h1 class="h4 mb-4">LOGIN</h1>
                                 </div>
+                                <div id="AlertModalDiv" class="hidden">
+                                </div>
+                                <form class="user" action="{{ url_for('login') }}" method="POST" 
+                                    data-ajax="true" data-ajax-method="POST" 
+                                    data-ajax-failure="onFailure" data-ajax-success="onSuccess">
+                                    <div class="form-group">
+                                        <input class="form-control form-control-user" placeholder="Enter Username..." name="username" />
+                                    </div>
+                                    <div class="form-group">
+                                       <input type="password" class="form-control form-control-user" placeholder="Password" name="password" />
+                                    </div>
+                                    <div class="form-group">
+                                        <div>
+                                            <input type="checkbox" id="customCheck">
+                                            <label class="small" for="customCheck">Remember Me</label>
+                                        </div>
+                                    </div>
+                                    <button class="btn btn-outline-secondary btn-block" type="submit">Login</button>
+                                    <hr>
+                                    <a href="index" class="btn btn-outline-danger btn-block">
+                                        <i class="fab fa-google fa-fw"></i> Login with Google
+                                    </a>
+                                    <a href="index" class="btn btn-outline-primary btn-block">
+                                        <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
+                                    </a>
+                                    <hr>
+                                    <div class="text-center">
+                                        <a class="btn btn-link" href="index">Forgot Password?</a>
+                                    </div>
+                                    <div class="text-center">
+                                        <a class="btn btn-link" href="index">Sign up now!</a>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </body>
+    </div>
+</body>
 </html>
