--- a/app/static/css/dark_site.css
+++ b/app/static/css/dark_site.css
@@ -37,3 +37,59 @@
 .dark_mode .navbar-toggler-icon {
     filter: invert(1);
 }
+
+.dark_mode .form-control {
+    background-color: #555;
+    color: #fff;
+    border-color:  #777;
+}
+
+.dark_mode .container.login-container {
+    color: #fff;
+}
+
+.dark_mode .card {
+    background-color: #1e1e1e;
+    color: #fff;
+}
+
+.dark_mode .form-control-user {
+    background-color: #303030;
+    color: #fff;
+    border-color: #555;
+}
+
+.dark_mode .btn-outline-secondary,
+.dark_mode .btn-outline-danger,
+.dark_mode .btn-outline-primary {
+    color: #fff;
+    border-color: #fff;
+}
+
+.dark_mode .fa-fw {
+    margin-right: 5px;
+}
+
+.dark_mode a {
+    color: #fff;
+}
+
+.dark_mode a:hover {
+    color: #cccccc;
+}
+
+.dark_mode label {
+    color: #fff;
+}
+
+.dark_mode #customCheck {
+    border-color: #fff;
+}
+
+.dark_mode #customCheck.form-check-input {
+    background-color:#333;
+}
+
+.dark_mode .small {
+    color: #fff; 
+}
