--- a/app/static/css/site.css
+++ b/app/static/css/site.css
@@ -1,5 +1,5 @@
 .bg-gradient {
-  background-color: #4e73df;
+  background-color: #fcfcfc;
   background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
 }
 
