--- a/app/templates/layout/nav_bar.html
+++ b/app/templates/layout/nav_bar.html
@@ -21,7 +21,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">Men</a></li>
                         <li><a class="dropdown-item" href="#">Women</a></li>
-                        <!-- Add more categories as needed -->
+                        <!-- add more later la -->
                     </ul>
                 </li>
             </ul>
@@ -38,7 +38,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="profile.jpg" alt="Profile" height="30" class="rounded-circle">
+                        <i class="fa-solid fa-user"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                         <li><a class="dropdown-item" href="#">Profile</a></li>
