--- a/app/templates/users/signup.html
+++ b/app/templates/users/signup.html
@@ -24,7 +24,7 @@
                         <div class="row justify-content-center">
                             <div class="p-5">
                                 <div class="text-center">
-                                    <i class="fa-3x fas fa-shop logo logo-waving"></i>
+                                    <span class="company-logo"></span>
                                     <br /><br />
                                     <h1 class="h4 mb-4">SIGN UP</h1>
                                 </div>
