--- a/app/templates/layout/nav_bar.html
+++ b/app/templates/layout/nav_bar.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container bg-gradient-dark topbar topbar-dark">
         <a class="logo topbar-brand d-flex align-items-center justify-content-center" action="{{ url_for('home') }}">
-            <div><i class="company-logo"></i></div>
-            <div>{{ company }}</div>
+            <i class="fa-solid fa-leaf fa-2p5x company-logo"></i>
+            <div class="mx-3">{{ company }}</div>
             <i id="weather_mode" class="fa-solid fa-sun"></i>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
