home page design sdg, Jquery AJAX, UI improvement
- move dark theme functions from site.js to theme.js
- use home.html to extends base.html and sdg.html
- introduce global call POST Ajax and AlertDiv

--- a/app/templates/layout/nav_bar.html
+++ b/app/templates/layout/nav_bar.html
@@ -54,3 +54,7 @@
         </div>
     </div>
 </nav>
+
+{% block javascript %}
+    <script src="{{ url_for('static', filename='js/theme.js') }}"></script>
+{% endblock %}
