Added categories and values sections on the home page
Categories consists of some options that I propose to be most-look for in the second hand market. The values provide the values of the company which emphasise on 3 key values.

--- a/app/static/css/dark_site.css
+++ b/app/static/css/dark_site.css
@@ -97,3 +97,77 @@
 .dark_mode .company-logo{
     color: #00A300;
 }
+
+.dark_mode body {
+    font-family: Arial, sans-serif;
+    background-color: #1e1e1e;
+    color: #ffffff; 
+  }
+  
+  .dark_mode .container {
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+  .dark_mode .category-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+  
+  .dark_mode .category {
+    width: calc(33.33% - 20px);
+    background-color: #2e2e2e;
+    padding: 20px; 
+    text-align: center;
+    font-weight: 600;
+    margin: 15px auto;
+  }
+  
+  .dark_mode .category i {
+    font-size: 3em;
+    margin-bottom: 10px;
+  }
+  
+  .dark_mode .category:hover {
+    background-color: #00A300;
+    cursor: pointer;
+  }
+  
+  @media only screen and (max-width: 768px) {
+    .dark_mode .category {
+      width: calc(50% - 20px);
+    }
+  }
+  
+  @media only screen and (max-width: 480px) {
+    .dark_mode .category {
+      width: calc(100% - 20px);
+    }
+  }
+
+.dark_mode .values-container {
+    background-color: #222;
+    color: #fff;
+  }
+  
+.dark_mode .values-heading {
+    color: #fff;
+  }
+  
+.dark_mode .value-item {
+    background-color: #333;
+    color: #fff;
+  }
+  
+.dark_mode .value-item:hover {
+    background-color: #555;
+  }
+  
+.dark_mode .value-icon {
+    color: #fff;
+  }
+  
+.dark_mode .value-description {
+    color: #ccc;
+  }  
