--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -3,20 +3,18 @@
 {% block title %}Home {% endblock %}
 
 {% block content %}
+    {% include "/home/categories.html" %}
+    <hr>
+    {% include "/home/values.html" %}
+    <hr>
+    <br/>
     {% include "/home/sdg.html" %}
 {% endblock %}
-{% block content2 %}
-    {% include "/home/categories.html" %}
-{% endblock %}
-{% block content3 %}
-    {% include "/home/values.html" %}
-{% endblock %}
-
 
 {% block javascript %}
     <script src="{{ url_for('static', filename='js/home/home.js') }}"></script>
 {% endblock %}
 
 {% block css %}
-    <script src="{{ url_for('static', filename='css/home/home.css') }}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home/home.css') }}" type="text/css" />
 {% endblock %}
