--- a/app/templates/home/values.html
+++ b/app/templates/home/values.html
@@ -1,20 +1,28 @@
-<div class="values-container">
-  <h2 class="values-heading">Our Values</h2>
-  <div class="values-grid">
-    <div class="value-item">
-      <i class="value-icon fas fa-handshake"></i>
-      <h3 class="value-title">Trust</h3>
-      <p class="value-description">At EcoHUB, trust is everything to us. We know how important it is to feel sure about the quality and authenticity of second-hand items. That's why we have clear product descriptions, safe payments, and straightforward solutions if things go wrong. Shop stress-free knowing that we've got your back!</p>
-    </div>
-    <div class="value-item">
-      <i class="value-icon fas fa-users"></i>
-      <h3 class="value-title">Community Engagement</h3>
-      <p class="value-description">Join our vibrant community at EcoHUB! We believe that buying and selling isn't just about connecting with like-minded individuals who share a passion for sustainability and value-driven shopping. Together, we can create a supportive and thriving community where everyone feels valued and empowered.</p>
-    </div>
-    <div class="value-item">
-      <i class="value-icon fas fa-recycle"></i>
-      <h3 class="value-title">Sustainability</h3>
-      <p class="value-description">At EcoHUB, sustainability isn't just a buzzword - it's our guiding principle. We're committed to promoting the circular economy and reducing waste by giving pre-loved items a new lease on life. Join us in our mission to shop sustainably and make a positive impact on the planet.</p>
+<div class="container">
+  <div class="values-container">
+    <h2 class="values-heading text-center">Our Values</h2>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="value-item border rounded p-3 values-body">
+          <i class="value-icon fas fa-handshake fa-3x p-2"></i>
+          <h3 class="value-title text-center mt-2">Trust</h3>
+          <p class="value-description mt-2 mb-2">At EcoHUB, trust is everything to us. We know how important it is to feel sure about the quality and authenticity of second-hand items. That's why we have clear product descriptions, safe payments, and straightforward solutions if things go wrong. Shop stress-free knowing that we've got your back!</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="value-item border rounded p-3 values-body">
+          <i class="value-icon fas fa-users fa-3x p-2"></i>
+          <h3 class="value-title text-center mt-2">Community Engagement</h3>
+          <p class="value-description mt-2 mb-2">Join our vibrant community at EcoHUB! We believe that buying and selling isn't just about connecting with like-minded individuals who share a passion for sustainability and value-driven shopping. Together, we can create a supportive and thriving community where everyone feels valued and empowered.</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="value-item border rounded p-3 values-body">
+          <i class="value-icon fas fa-recycle fa-3x p-2"></i>
+          <h3 class="value-title text-center mt-2">Sustainability</h3>
+          <p class="value-description mt-2 mb-2">At EcoHUB, sustainability isn't just a buzzword - it's our guiding principle. We're committed to promoting the circular economy and reducing waste by giving pre-loved items a new lease on life. Join us in our mission to shop sustainably and make a positive impact on the planet.</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
