--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/site.css') }}" type="text/css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/dark_site.css') }}" type="text/css" />
     {% block javascript %} {% endblock %}
+    {% block css %} {% endblock %}
+
 </head>
 
 {% block nav_bar %}
